--- a/.github/workflows/validation-template.yaml
+++ b/.github/workflows/validation-template.yaml
@@ -6,8 +6,14 @@ on:
 jobs:
   Validate:
     name: Test definitions
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set up Python 🐍
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
 
       - name: Install openapi-to-fastapi
         run: pip install openapi-to-fastapi
