--- a/DataProducts/Person/JobApplicantProfile_v1.0.json
+++ b/DataProducts/Person/JobApplicantProfile_v1.0.json
@@ -300,7 +300,7 @@
             "example": "0731"
           },
           "startDate": {
-            "title": "Start date",
+            "title": "Start Date",
             "type": "string",
             "description": "The date on which the specific education has been started",
             "format": "date",
@@ -5209,14 +5209,14 @@
             "example": "2654.1.7"
           },
           "startDate": {
-            "title": "Start date",
+            "title": "Start Date",
             "type": "string",
             "description": "The start date of the employment in the occupation",
             "format": "date",
             "example": "2018-01-01"
           },
           "endDate": {
-            "title": "End date",
+            "title": "End Date",
             "type": "string",
             "description": "The end date of the employment in the occupation",
             "format": "date",
